fix horizontal scrolling issue caused by passwordFieldState span

--- a/styles/components/form-sign-up.css
+++ b/styles/components/form-sign-up.css
@@ -56,6 +56,7 @@
   #passwordFieldState {
     position: absolute;
     top: -9999px;
+    left: -9999px;
   }
 
   @media (min-width: 950px) {
